[package]
name = "rsmp"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmp-derive = { path = "../rsmp-derive" }
thiserror = "2.0"
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
async-trait = "0.1"
pin-project = "1.0"
strum = { version = "0.27", features = ["derive"] }
